src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Admissions_Mobile_Opt_In__c</fullName>
        <description>Mobile Opt-in for the admissions process</description>
        <inlineHelpText>Mobile Opt-in for the admissions process</inlineHelpText>
        <label>Admissions Mobile Opt In</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <formula>IF( (ISBLANK(Deceased_Date__c) &amp;&amp; NOT(hed__Deceased__c = TRUE)),


(YEAR(TODAY()) - YEAR(Birthdate) -
( IF( ( ( MONTH(TODAY()) &lt; MONTH(Birthdate) ) ||
( (MONTH(TODAY()) == MONTH(Birthdate)) &amp;&amp; ( DAY(TODAY()) &lt; DAY(Birthdate) ))
),1,0
)
)),Null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculated field based on birthdate. Please do not edit directly</inlineHelpText>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Alumni_Directory_Record__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Alumni Directory record associated to the Contact</description>
        <inlineHelpText>The alumni directory record is a read only copy of certain fields created by Jitterbit integration from Banner for the Alumni Directory</inlineHelpText>
        <label>Alumni Directory Record</label>
        <referenceTo>Alumni_Directory__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Anonymous_Donor__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Prefers not to be identified with their donations</inlineHelpText>
        <label>Anonymous Donor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Blackbaud_Confirmed_Assets__c</fullName>
        <label>Blackbaud Confirmed Assets</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Under $50K</fullName>
                </value>
                <value>
                    <fullName>$50K - $149K,</fullName>
                </value>
                <value>
                    <fullName>$150K - $499K,</fullName>
                </value>
                <value>
                    <fullName>$500K - $1M,</fullName>
                </value>
                <value>
                    <fullName>$1M - $9.99M,</fullName>
                </value>
                <value>
                    <fullName>$10M+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cash_Transactions__c</fullName>
        <description>Account cash roll up</description>
        <formula>Account.cash_rollup__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Sum of all Cash transactions from the account level, calculated in Salesforce.</inlineHelpText>
        <label>Cash Transactions</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commitment_Transactions__c</fullName>
        <description>Commitment transactions roll up</description>
        <formula>Account.commitment_rollup__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Sum of commitment transactions from the account level, calculated in Salesforce.</inlineHelpText>
        <label>Commitment Transactions</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Community_Address_Range__c</fullName>
        <description>Used to make city+state easily visible on community searches without exposing entire address</description>
        <formula>hed__Current_Address__r.hed__MailingCity__c  + &quot;, &quot; +  hed__Current_Address__r.hed__MailingState__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Feed over of city and state from current address record</inlineHelpText>
        <label>Community Address Range</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Confidential__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Contact has a confidential flag in Banner</description>
        <inlineHelpText>Contact has a confidential flag in Banner</inlineHelpText>
        <label>Confidential</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Constituent_ID__c</fullName>
        <description>A unique external ID field to house a prospect or student&apos;s ID for integration or manual data loading processes. It is also the identification code to be used for Contact Matching Rules as part of the Interaction process.</description>
        <label>Constituent ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Banner_Key__c</fullName>
        <externalId>true</externalId>
        <label>Contact Banner Key</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Contact_Constituent_ID__c</fullName>
        <description>A unique external ID field to house a prospect or student&apos;s ID for integration or manual data loading processes. It is also the identification code to be used for Contact Matching Rules as part of the Interaction process.</description>
        <label>Contact_Constituent ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_FY_Cash__c</fullName>
        <description>Fed from Banner</description>
        <inlineHelpText>Total current Fiscal Year Cash fed over from Banner</inlineHelpText>
        <label>Current FY Cash</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_FY_Commitment__c</fullName>
        <description>Fed from Banner</description>
        <inlineHelpText>Current Fiscal Year Commitments fed over from Banner</inlineHelpText>
        <label>Current FY Commitment</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Fiscal_Year_Cash__c</fullName>
        <formula>Account.Current_Fiscal_Year_Cash__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Sum total of the cash transactions from this fiscal year</inlineHelpText>
        <label>Current Fiscal Year Cash</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Fiscal_Year_Commitments__c</fullName>
        <formula>Account.Current_Fiscal_Year_Commitments__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Sum of Commitments made this fiscal year</inlineHelpText>
        <label>Current Fiscal Year Commitments</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Deceased_Date__c</fullName>
        <description>Reported date contact became deceased</description>
        <inlineHelpText>Reported date contact became deceased</inlineHelpText>
        <label>Deceased Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Display_on_Directory__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Calculates whether the contact should be visible in the directory</description>
        <label>Display on Directory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_Not_Mail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Mail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_Not_Text__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicate if the Contact does not want to be reached by text.</description>
        <inlineHelpText>Indicate if the Contact does not want to be reached by text.</inlineHelpText>
        <label>Do Not Text</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Donor_Status__c</fullName>
        <inlineHelpText>From Banner</inlineHelpText>
        <label>Donor Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Acquired</fullName>
                </value>
                <value>
                    <fullName>Retained</fullName>
                </value>
                <value>
                    <fullName>Renewed</fullName>
                </value>
                <value>
                    <fullName>LYBUNT</fullName>
                </value>
                <value>
                    <fullName>SYBUNT</fullName>
                </value>
                <value>
                    <fullName>Never Donor</fullName>
                </value>
                <value>
                    <fullName>Sustainer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Employer__c</fullName>
        <inlineHelpText>Duplicated on detail record to allow for smaller employers who we may not have a Banner or Salesforce record for.</inlineHelpText>
        <label>Employer</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Gift_Date__c</fullName>
        <inlineHelpText>Date of first gift record in Banner</inlineHelpText>
        <label>First Gift Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Focus_Rating__c</fullName>
        <label>Focus Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Level 1/Top Tier</fullName>
                </value>
                <value>
                    <fullName>Level2/Pipeline 2 Yrs</fullName>
                </value>
                <value>
                    <fullName>Level 3/Pipeline 3-5Yrs</fullName>
                </value>
                <value>
                    <fullName>Level 4/Dicovery-Qualify</fullName>
                </value>
                <value>
                    <fullName>Level 5/Volunteer/Networker</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Foot_On_Campus__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Manually populated field to identify who has stepped on campus in an easy way to capture and report. If checked (Yes), this contact has been on campus through the admissions office at some point. This field only gets checked once and does not change for the number of visits. The student&apos;s record should show only &apos;Yes/Checked&apos; for &quot;foot on campus&quot; or &apos;No/Unchecked&quot; for &quot;foot on campus.</description>
        <inlineHelpText>Manually populated field to identify who has stepped on campus in an easy way to capture and report. If checked (Yes), this contact has been on campus through the admissions office at some point. This field only gets checked once and does not change for t</inlineHelpText>
        <label>Foot On Campus?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gift_Officer_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Gift Officer (Contact)</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contacts (Gift Officer (Contact))</relationshipLabel>
        <relationshipName>Contacts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Gift_Officer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Gift Officer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Grad_Level__c</fullName>
        <description>Undergrad, Grad, or Both?</description>
        <label>Grad Level</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Undergrad</fullName>
                </value>
                <value>
                    <fullName>Grad</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Household_Giving__c</fullName>
        <formula>Account.Potential_giving__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Household Giving</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Income__c</fullName>
        <label>Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Initial_Foot_on_Campus__c</fullName>
        <description>Populated when the Contact initially attended an event on campus</description>
        <inlineHelpText>Populated when the Contact initially attended an event on campus</inlineHelpText>
        <label>Initial Foot on Campus</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Is_Portal_User__c</fullName>
        <formula>Portal_User__c &lt;&gt; null</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Portal User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Title__c</fullName>
        <label>Job Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Known_Planned_Gift__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Known Planned Gift</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Gift_Date__c</fullName>
        <label>Last Gift Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Time_on_Campus__c</fullName>
        <description>Populated/updated when the Contact last attended an event on campus</description>
        <inlineHelpText>Populated/updated when the Contact last attended an event on campus</inlineHelpText>
        <label>Last Time on Campus</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lifetime_Cash_Recieved_Dollars__c</fullName>
        <description>Feed from Workflow</description>
        <label>Lifetime Cash Recieved Dollars</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lifetime_Commitment_Dollars__c</fullName>
        <description>Feed from Workflow</description>
        <label>Lifetime Commitment Dollars</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LinkedIn__c</fullName>
        <label>LinkedIn</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Marital_Status__c</fullName>
        <label>Marital Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Single</fullName>
                </value>
                <value>
                    <fullName>Married</fullName>
                </value>
                <value>
                    <fullName>Seperated</fullName>
                </value>
                <value>
                    <fullName>Legally Separated</fullName>
                </value>
                <value>
                    <fullName>Divorced</fullName>
                </value>
                <value>
                    <fullName>Widowed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MyProgram__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MyProgram</label>
        <referenceTo>hed__Program_Enrollment__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Enrollment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Net_Worth__c</fullName>
        <label>Net Worth</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>No_Email_Solicitations__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Email Solicitations</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_Mail_Solicitations__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Mail Solicitations</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_Phone_Solicitations__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Phone Solicitations</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_Fiscal_Years_Giving__c</fullName>
        <formula>Account.Number_Fiscal_Years_Giving__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number Fiscal Years Giving</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Occupation__c</fullName>
        <label>Occupation</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personal_Email__c</fullName>
        <label>Personal Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Portal_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Portal User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contacts_Portal</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Preferred_Class_Year__c</fullName>
        <label>Preferred Class Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_First_Name__c</fullName>
        <description>What someone prefers to be called</description>
        <inlineHelpText>What someone prefers to be called</inlineHelpText>
        <label>Preferred First Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Last_Name__c</fullName>
        <description>last name used previously, not current</description>
        <inlineHelpText>last name used previously, not current</inlineHelpText>
        <label>Previous Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Academic_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Academic Program</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Students</relationshipLabel>
        <relationshipName>Academic_Program_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Department__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Department</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Department Members</relationshipLabel>
        <relationshipName>Department_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Educational_Institution__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Educational Institution</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Institution Members</relationshipLabel>
        <relationshipName>Institution_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Sports_Organization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Sports Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Organization Members</relationshipLabel>
        <relationshipName>Sport_Organization_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Student_Organization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Student Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contacts (Primary Student Organization)</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_University_Relationship__c</fullName>
        <label>Primary University Relationship</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alumna/us</fullName>
                </value>
                <value>
                    <fullName>Non Degreed Alumna/us</fullName>
                </value>
                <value>
                    <fullName>Parent</fullName>
                </value>
                <value>
                    <fullName>Faculty</fullName>
                </value>
                <value>
                    <fullName>Staff</fullName>
                </value>
                <value>
                    <fullName>Trustee</fullName>
                </value>
                <value>
                    <fullName>Trustee Emeritus</fullName>
                </value>
                <value>
                    <fullName>Former Trustee</fullName>
                </value>
                <value>
                    <fullName>Student</fullName>
                </value>
                <value>
                    <fullName>Graduate Student</fullName>
                </value>
                <value>
                    <fullName>Former Employee</fullName>
                </value>
                <value>
                    <fullName>Other Person</fullName>
                </value>
                <value>
                    <fullName>Prospective Student</fullName>
                </value>
                <value>
                    <fullName>Withdrawn Student</fullName>
                </value>
                <value>
                    <fullName>Non-Constituent Person</fullName>
                </value>
                <value>
                    <fullName>Inactive Person</fullName>
                </value>
                <value>
                    <fullName>Corporate Contact</fullName>
                </value>
                <value>
                    <fullName>Foundation Contact</fullName>
                </value>
                <value>
                    <fullName>Personal/ Family Foundation Contact</fullName>
                </value>
                <value>
                    <fullName>Association Contact</fullName>
                </value>
                <value>
                    <fullName>Fund-Raising Consortium</fullName>
                </value>
                <value>
                    <fullName>Government Contact</fullName>
                </value>
                <value>
                    <fullName>Estate Contact</fullName>
                </value>
                <value>
                    <fullName>Religious Organization Contact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prior_Fiscal_Year_Cash__c</fullName>
        <label>Prior Fiscal Year Cash</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prior_Fiscal_Year_Commitments__c</fullName>
        <label>Prior Fiscal Year Commitments</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Profile__c</fullName>
        <description>Place to upload pictures</description>
        <inlineHelpText>picture</inlineHelpText>
        <label>Profile</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Prospect_Capacity_Rating__c</fullName>
        <label>Prospect Capacity Rating</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prospect_Status__c</fullName>
        <label>Prospect Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pool Prospect</fullName>
                </value>
                <value>
                    <fullName>Discovery</fullName>
                </value>
                <value>
                    <fullName>Cultivation</fullName>
                </value>
                <value>
                    <fullName>Solicitation</fullName>
                </value>
                <value>
                    <fullName>Stewardship</fullName>
                </value>
                <value>
                    <fullName>Dropped</fullName>
                </value>
                <value>
                    <fullName>Gift Officer Assigned</fullName>
                </value>
                <value>
                    <fullName>Gift Officer Dropped</fullName>
                </value>
                <value>
                    <fullName>Hard Drop - Disqualified</fullName>
                </value>
                <value>
                    <fullName>Proposal Funded Closed</fullName>
                </value>
                <value>
                    <fullName>Proposal Planned</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Registrar_Last_Name__c</fullName>
        <label>Registrar Last Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Gift_Officer_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Secondary Gift Officer (Contact)</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contacts (Secondary Gift Officer (Contact))</relationshipLabel>
        <relationshipName>Contacts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Secondary_Gift_Officer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Secondary Gift Officer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SecondaryProspects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Soft_Credit__c</fullName>
        <description>Soft Credit fed over from Banner</description>
        <label>Soft Credit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Spouse__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Spouse</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>St_Thomas_Connection__c</fullName>
        <inlineHelpText>All known connections to St Thomas</inlineHelpText>
        <label>St. Thomas Connection</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alumni-UG</fullName>
                </value>
                <value>
                    <fullName>Alumni-Grad</fullName>
                </value>
                <value>
                    <fullName>Parent</fullName>
                </value>
                <value>
                    <fullName>Staff</fullName>
                </value>
                <value>
                    <fullName>Trustee</fullName>
                </value>
                <value>
                    <fullName>Donor</fullName>
                </value>
                <value>
                    <fullName>Student</fullName>
                </value>
                <value>
                    <fullName>Alumna/us</fullName>
                </value>
                <value>
                    <fullName>Association</fullName>
                </value>
                <value>
                    <fullName>Corporate Foundation</fullName>
                </value>
                <value>
                    <fullName>Corporation</fullName>
                </value>
                <value>
                    <fullName>Donor Advised Fund</fullName>
                </value>
                <value>
                    <fullName>Estate</fullName>
                </value>
                <value>
                    <fullName>Faculty</fullName>
                </value>
                <value>
                    <fullName>Former Employee</fullName>
                </value>
                <value>
                    <fullName>Former Trustee</fullName>
                </value>
                <value>
                    <fullName>Foundation</fullName>
                </value>
                <value>
                    <fullName>Fund-Raising Consortium</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Government Foundation</fullName>
                </value>
                <value>
                    <fullName>Graduate Student</fullName>
                </value>
                <value>
                    <fullName>Inactive Non-Person</fullName>
                </value>
                <value>
                    <fullName>Inactive Person</fullName>
                </value>
                <value>
                    <fullName>Institution Foundation</fullName>
                </value>
                <value>
                    <fullName>Non Degreed Alumna/us</fullName>
                </value>
                <value>
                    <fullName>Non-Constituent Person</fullName>
                </value>
                <value>
                    <fullName>Non-Revocable Trust</fullName>
                </value>
                <value>
                    <fullName>Other Organization</fullName>
                </value>
                <value>
                    <fullName>Other Person</fullName>
                </value>
                <value>
                    <fullName>Personal/ Family Foundation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>St_Thomas_Degree__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>St Thomas Degree</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>hed__Affiliation__c.hed__Affiliation_Type__c</field>
                <operation>equals</operation>
                <value>Educational Institution</value>
            </filterItems>
            <filterItems>
                <field>hed__Affiliation__c.hed__Primary__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>hed__Affiliation__c.Major__c</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>hed__Affiliation__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>St_Thomas_Degree_text__c</fullName>
        <description>St. Thomas Degree information populated via Banner</description>
        <label>St. Thomas Degree Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Number_Years_Giving__c</fullName>
        <label>Total Number Years Giving</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Trustee__c</fullName>
        <label>Trustee Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Current</fullName>
                </value>
                <value>
                    <fullName>Former</fullName>
                </value>
                <value>
                    <fullName>Emeritus</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>University_Banner_ID__c</fullName>
        <label>University Banner ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>University_Banner_PIDM__c</fullName>
        <externalId>true</externalId>
        <label>University Banner PIDM</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YTD_Associated_Gifts__c</fullName>
        <label>YTD Associated Gifts</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>YTD_Household_Gifts__c</fullName>
        <formula>Account.YTD_Household_Gifts__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>YTD Household Gifts</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Yr3_Cash_Received__c</fullName>
        <label>Yr3 Cash Received</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Yr3_Commitments__c</fullName>
        <label>Yr3 Commitments</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>